--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -6,7 +6,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: checkout
-              uses: checkout@v4
+              uses: actions/checkout@v4
             
             - name: Install cowsay
               run: apt-get install cowsay -y
