--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -9,7 +9,7 @@ jobs:
               uses: actions/checkout@v4
             
             - name: Install cowsay
-              run: apt-get install cowsay -y
+              run: sudo apt-get install cowsay -y
             
             - name: cowsay
               run: cowsay -f dragon "Run for cover I am a dragon ... RAWWW" >> dragon.txt
