--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -15,4 +15,4 @@ jobs:
               run: cowsay -f dragon "Run for cover I am a dragon ... RAWWW" >> dragon.txt
 
             - name: display
-              run: grep -i dragon dragon.txt
+              run: cat dragon.txt
