--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -12,7 +12,7 @@ jobs:
               run: sudo apt-get install cowsay -y
             
             - name: cowsay
-              run: cowsay -f dragon "Run for cover I am a dragon ... RAWWW" >> dragon.txt
+              run: cowsay -f lion "Run for cover I am a dragon ... RAWWW" >> lion.txt
 
             - name: display
-              run: cat dragon.txt
+              run: cat lion.txt
