--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -26,7 +26,7 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         - name: download
-          uses: acions/download@v3
+          uses: actions/download-artifact@v4.1.8
           with:
             name: lion
             path: lion.txt
