--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -23,12 +23,12 @@ jobs:
                 name: lion
                 path: lion.txt
     second_job:
+      needs: first_job
       runs-on: ubuntu-latest
       steps:
         - name: download
           uses: actions/download-artifact@v4.1.8
           with:
             name: lion
-            path: lion.txt
         - name: display file
           run: cat lion.txt
