--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,34 +1,51 @@
-name: "demo actions"
-on: 
-    push:
-jobs:
-    first_job:
-        runs-on: ubuntu-latest
-        steps:
-            - name: checkout
-              uses: actions/checkout@v4
+# name: "demo actions"
+# on: 
+#     push:
+# jobs:
+#     first_job:
+#         runs-on: ubuntu-latest
+#         steps:
+#             - name: checkout
+#               uses: actions/checkout@v4
             
-            - name: Install cowsay
-              run: sudo apt-get install cowsay -y
+#             - name: Install cowsay
+#               run: sudo apt-get install cowsay -y
             
-            - name: cowsay
-              run: cowsay -f moose "Run for cover I am a dragon ... RAWWW" >> lion.txt
+#             - name: cowsay
+#               run: cowsay -f moose "Run for cover I am a dragon ... RAWWW" >> lion.txt
 
-            - name: display
-              run: cat lion.txt
+#             - name: display
+#               run: cat lion.txt
             
-            - name: upload
-              uses: actions/upload-artifact@v3
-              with:
-                name: lion
-                path: lion.txt
-    second_job:
-      needs: first_job
-      runs-on: ubuntu-latest
-      steps:
-        - name: download
-          uses: actions/download-artifact@v3
-          with:
-            name: lion
-        - name: display file
-          run: cat lion.txt
+#             - name: upload
+#               uses: actions/upload-artifact@v3
+#               with:
+#                 name: lion
+#                 path: lion.txt
+#     second_job:
+#       needs: first_job
+#       runs-on: ubuntu-latest
+#       steps:
+#         - name: download
+#           uses: actions/download-artifact@v3
+#           with:
+#             name: lion
+#         - name: display file
+#           run: cat lion.txt
+
+name: demo variables
+on: 
+  push:
+
+jobs:
+  job_1:
+    runs-on: ubuntu-latest
+    steps:
+      - name: step1
+        env:
+          COLOR: blue
+          DAY: Monday
+        run: |
+          echo "$COLOR"
+          echo "$DAY"
+
