--- a/action.yaml
+++ b/action.yaml
@@ -18,7 +18,8 @@ runs:
   steps:
     - name: sum
       id: sum
-      shell: python
+      shell: bash
       run: |
-        sum = int(${{inputs.num1}}) + int(${{inputs.num2}})
-        print("::set-output name=sum::$sum")
+        # sum = int(${{inputs.num1}}) + int(${{inputs.num2}})
+        sum=$(expr $num1 + $num2)
+        echo "::set-output name=sum::$sum"
